Commencement du dashboard administrateur
- Fixtures des utilisateurs et des chevaux
- Tableaux et formulaires des cheveux et des cavaliers
- Début d'intégration

--- a/templates/security/confirmation.html.twig
+++ b/templates/security/confirmation.html.twig
@@ -21,10 +21,11 @@
                         <i class="medium material-icons " style="color: #00C853;">check_circle</i>
                     </div>
 
-                    <h5 class="center-align">Votre mot de passe a bien été modifié.</h5>
+                    <p class="center-align">Votre mot de passe a bien été modifié.</p>
 
-                    <a href="{{ path('login_page') }}"><button class="btn waves-effect waves-light" type="button">Se connecter</button></a>
-
+                </div>
+                <div class="card-action">
+                    <div class="right-align"><a href="{{ path('login_page') }}" class="forgot-password">Se connecter</a></div>
                 </div>
             </div>
         </div>
