--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,7 @@
 
         <!-- Custom -->
         <link rel="stylesheet" href="{{ asset('../public/build/css/main.css') }}">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         {% block stylesheets %}
         {% endblock %}
     </head>
