--- a/templates/mail/security/reset.html.twig
+++ b/templates/mail/security/reset.html.twig
@@ -8,9 +8,9 @@
     <title>Réinitialisation du mot de passe</title>
 </head>
     <body>
-        {{ token }}
         <p>Bonjour, vous avez fait une demande de réinitialisation de votre mot de passe.</p>
-        <p>Afin de pouvoir créer un nouveau mot de passe, veuillez cliquer <a href="{{ absolute_url(path('reset_password', {'token': token })) }}" target="_blank">ici</a>, ce lien est valable 1h.</p>
+        <p>Afin de pouvoir créer un nouveau mot de passe, veuillez cliquer ci-dessous. Ce lien est valable 1h.</p>
+        <p><a href="{{ absolute_url(path('reset_password', {'token': token })) }}" target="_blank">{{ absolute_url(path('reset_password', {'token': token })) }}</a></p>
         <p>Si vous n'avez pas fait cette demande, vous pouvez simplement ignorer cet email.</p>
     </body>
 </html>
